Review and check structure of conclusion while condensing text

--- a/jupyter_notebooks/04_Feature_Engineering.ipynb
+++ b/jupyter_notebooks/04_Feature_Engineering.ipynb
@@ -753,6 +753,142 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "4. Apply the transformation to the Train and Test datasets."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.pipeline import Pipeline\n",
+        "pipeline = Pipeline([\n",
+        "    (\"NumericLogTransform\",vt.LogTransformer(variables=['1stFlrSF', 'LotArea', 'GrLivArea'])),\n",
+        "    (\"NumericPowerTransform\",vt.PowerTransformer(variables=['MasVnrArea'])),\n",
+        "    (\"NumericYeoJohnsonTransform\",vt.YeoJohnsonTransformer(variables=['OpenPorchSF']))\n",
+        "    ])\n",
+        "train_set = pipeline.fit_transform(train_set)\n",
+        "test_set = pipeline.transform(test_set)\n",
+        "\n",
+        "print(\"* Numerical transformation initialized!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_set.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### SmartCorrelatedSelection Variables"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* All variables will be used for `SmartCorrelatedSelection`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. Create a copy of the Train set dataframe"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Drop SalePrice as it will be our target to predict"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_temp = train_set.drop(['SalePrice'],axis=1)\n",
+        "df_temp.head(5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_smart_corr_selection = df_temp.copy()\n",
+        "df_smart_corr_selection.head(3)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. Create engineered variables(s) by applying the transformation(s)\n",
+        "\n",
+        "* Here we are Looking for groups of features that correlate amongst themselves."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from feature_engine.selection import SmartCorrelatedSelection\n",
+        "selection_method = \"cardinality\"\n",
+        "corr_method = 'spearman'\n",
+        "smart_corr_selection = SmartCorrelatedSelection(variables=None, method=corr_method, threshold=0.60, selection_method=selection_method)\n",
+        "\n",
+        "smart_corr_selection.fit_transform(df_smart_corr_selection)\n",
+        "smart_corr_selection.correlated_feature_sets_"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "3. All possible surplus correlated features to be reomved since they would add the same information to the model."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "smart_corr_selection.features_to_drop_"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ltNetd085qHf"
       },
@@ -764,7 +900,34 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* If you do not need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
+        "* Feature Engineering Transformers\n",
+        "  * Ordinal categorical encoding: `['BsmtExposure', 'BsmtFinType1', 'GarageFinish', 'KitchenQual']`\n",
+        "  * Numerical transformation:\n",
+        "    * `Log e`, `Log 10`, `Box Cox` and `Yeo Johnson` may be considered for numerical transformation of `1stFlrSF`, `LotArea` and `SalePrice`.\n",
+        "      * `SalePrice` will be excluded however as it will be the target of the prediction\n",
+        "    * `Power` may be considered for numerical transformation of `GarageArea` and `MasVnrArea`.\n",
+        "    * `Log e`, `Log 10`, `Power`, `Box Cox` and `Yeo Johnson` may be considered for numerical transformation of `GrLivArea`.\n",
+        "    * `Yeo Johnson` may be considered for numerical transformation of `OpenPorchSF`.\n",
+        "\n",
+        "    The following transformers will be used:\n",
+        "    * (\"NumericLogTransform\",vt.LogTransformer(variables=['1stFlrSF', 'GrLivArea', 'LotArea']))\n",
+        "    * (\"NumericPowerTransform\",vt.PowerTransformer(variables=['GarageArea', 'MasVnrArea']))\n",
+        "    * (\"NumericYeoJohnsonTransform\",vt.YeoJohnsonTransformer(variables=['OpenPorchSF']))\n",
+        "  * Strongest correlated variables as per `sale_price_study notebook`:\n",
+        "    * `'1stFlrSF', 'GarageArea', 'GrLivArea', 'OverallQual', 'TotalBsmtSF', 'YearBuilt'`\n",
+        "  * Smart Correlation Selection:\n",
+        "    * Features to be dropped: `['2ndFlrSF', 'GarageYrBlt', 'OverallQual', 'TotalBsmtSF']`\n",
+        "    * Additional results from analysing different combinations of correlation method and selection method:\n",
+        "      * spearman\n",
+        "        * cardinality -- `['1stFlrSF', 'GrLivArea', 'GarageArea', 'YearBuilt']`\n",
+        "        * drop -- `['2ndFlrSF', 'GarageYrBlt', 'OverallQual', 'TotalBsmtSF']`\n",
+        "        *    variance -- `['TotalBsmtSF', '2ndFlrSF', 'GarageYrBlt', 'YearBuilt']`\n",
+        "        * drop -- `['1stFlrSF', 'GarageArea', 'GrLivArea', 'OverallQual']`\n",
+        "      * pearson \n",
+        "        * cardinality -- `['1stFlrSF', 'GrLivArea', 'GarageArea']`\n",
+        "        * drop -- `['2ndFlrSF', 'GarageYrBlt', 'TotalBsmtSF']`\n",
+        "        *    variance -- `['TotalBsmtSF', '2ndFlrSF', 'GarageYrBlt']`\n",
+        "        * drop -- `['1stFlrSF', 'GarageArea', 'GrLivArea']`"
       ]
     }
   ],
