Split datasets and adjust hyperparameter optimisation

--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -30,7 +30,9 @@
         "\n",
         "## Additional Comments\n",
         "\n",
-        "*  No comments.\n"
+        "* This notebook was informed and guided by the steps provided in the Customer Churn Walkthrough Porject.\n",
+        "\n",
+        "* We intend to explore the data using the CRISP-DM Data methodology.\n"
       ]
     },
     {
@@ -63,12 +65,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspace/Heritage-Housing-Issues-PP5/jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "current_dir = os.getcwd()\n",
@@ -88,12 +101,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "TwHsQRWjz3i9",
         "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You set a new current directory\n"
+          ]
+        }
+      ],
       "source": [
         "os.chdir(os.path.dirname(current_dir))\n",
         "print(\"You set a new current directory\")"
@@ -110,12 +131,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "vz3S-_kjz3jA",
         "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/workspace/Heritage-Housing-Issues-PP5'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "current_dir = os.getcwd()\n",
         "current_dir"
@@ -127,14 +159,7 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Section 1 content"
+        "# Import Packages"
       ]
     },
     {
@@ -142,7 +167,12 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "pd.options.display.max_columns = None\n",
+        "pd.options.display.max_rows = None"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,18 +185,16 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "uFQo3ycuO-v6"
-      },
+      "metadata": {},
       "source": [
-        "# Section 2"
+        "# Load House Price Records"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 2 content"
+        "Read the house_prices_records dataset csv file into a Pandas dataframe."
       ]
     },
     {
@@ -174,7 +202,212 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "df = pd.read_csv(f\"outputs/datasets/cleaned/clean_house_price_records.csv\")\n",
+        "print(df.shape)\n",
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# ML Regressor Pipeline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "* Here we create the ML pipeline for Data Cleaning and Feature Engineering"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.pipeline import Pipeline\n",
+        "\n",
+        "### Feature Engineering\n",
+        "from feature_engine import transformation as vt\n",
+        "from feature_engine.encoding import OrdinalEncoder\n",
+        "from feature_engine.selection import SmartCorrelatedSelection\n",
+        "\n",
+        "### Feat Scaling\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "### Feat Selection\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "\n",
+        "### ML algorithms\n",
+        "from sklearn.ensemble import AdaBoostRegressor\n",
+        "from sklearn.ensemble import ExtraTreesRegressor\n",
+        "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from xgboost import XGBRegressor\n",
+        "\n",
+        "selection_method = \"cardinality\"\n",
+        "corr_method = \"spearman\"\n",
+        "\n",
+        "def PipelineOptimization(model):\n",
+        "    pipeline_base = Pipeline([\n",
+        "\n",
+        "      (\"OrdinalCategoricalEncoder\", OrdinalEncoder(encoding_method='arbitrary',\n",
+        "                                                   variables=['BsmtExposure',\n",
+        "                                                              'BsmtFinType1',\n",
+        "                                                              'GarageFinish',\n",
+        "                                                              'KitchenQual'])),\n",
+        "\n",
+        "      (\"NumericLogTransform\", vt.LogTransformer(variables=['1stFlrSF',\n",
+        "                                                           'LotArea',\n",
+        "                                                           'GrLivArea'])),\n",
+        "      (\"NumericPowerTransform\", vt.PowerTransformer(variables=['MasVnrArea'])),\n",
+        "      (\"NumericYeoJohnsonTransform\",\n",
+        "       vt.YeoJohnsonTransformer(variables=['OpenPorchSF'])),\n",
+        "\n",
+        "      (\"SmartCorrelatedSelection\",\n",
+        "       SmartCorrelatedSelection(variables=None,\n",
+        "                                method=corr_method,\n",
+        "                                threshold=0.6,\n",
+        "                                selection_method=selection_method\n",
+        "                                )),\n",
+        "    \n",
+        "      (\"feat_scaling\", StandardScaler()),\n",
+        "\n",
+        "      (\"feat_selection\",  SelectFromModel(model)),\n",
+        "\n",
+        "      (\"model\", model),\n",
+        "\n",
+        "    ])\n",
+        "\n",
+        "    return pipeline_base"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Hyperparameter Optimisation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Custom Class for hyperparameter Optimization"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "class HyperparameterOptimizationSearch:\n",
+        "\n",
+        "    def __init__(self, models, params):\n",
+        "        self.models = models\n",
+        "        self.params = params\n",
+        "        self.keys = models.keys()\n",
+        "        self.grid_searches = {}\n",
+        "\n",
+        "    def fit(self, X, y, cv, n_jobs, verbose=1, scoring=None, refit=False):\n",
+        "        for key in self.keys:\n",
+        "            print(f\"\\nRunning GridSearchCV for {key} \\n\")\n",
+        "            model = PipelineOptimization(self.models[key])\n",
+        "\n",
+        "            params = self.params[key]\n",
+        "            gs = GridSearchCV(model, params, cv=cv, n_jobs=n_jobs, verbose=verbose, scoring=scoring)\n",
+        "            gs.fit(X,y)\n",
+        "            self.grid_searches[key] = gs    \n",
+        "    def score_summary(self, sort_by='mean_score'):\n",
+        "        def row(key, scores, params):\n",
+        "            d = {\n",
+        "                 'estimator': key,\n",
+        "                 'min_score': min(scores),\n",
+        "                 'max_score': max(scores),\n",
+        "                 'mean_score': np.mean(scores),\n",
+        "                 'std_score': np.std(scores),\n",
+        "            }\n",
+        "            return pd.Series({**params,**d})\n",
+        "\n",
+        "        rows = []\n",
+        "        for k in self.grid_searches:\n",
+        "            params = self.grid_searches[k].cv_results_['params']\n",
+        "            scores = []\n",
+        "            for i in range(self.grid_searches[k].cv):\n",
+        "                key = \"split{}_test_score\".format(i)\n",
+        "                r = self.grid_searches[k].cv_results_[key]        \n",
+        "                scores.append(r.reshape(len(params),1))\n",
+        "\n",
+        "            all_scores = np.hstack(scores)\n",
+        "            for p, s in zip(params,all_scores):\n",
+        "                rows.append((row(k, s, p)))\n",
+        "\n",
+        "        df = pd.concat(rows, axis=1).T.sort_values([sort_by], ascending=False)\n",
+        "        columns = ['estimator', 'min_score', 'mean_score', 'max_score', 'std_score']\n",
+        "        columns = columns + [c for c in df.columns if c not in columns]\n",
+        "        return df[columns], self.grid_searches"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Split Train and Test datasets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "                                    df.drop(['SalePrice'], axis=1),\n",
+        "                                    df['SalePrice'],\n",
+        "                                    test_size=0.2,\n",
+        "                                    random_state=0\n",
+        "                                    )\n",
+        "\n",
+        "print(\"* Train set:\", X_train.shape, y_train.shape, \"\\n* Test set:\",  X_test.shape, y_test.shape)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Grid Search CV - Sklearn"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -263,7 +496,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.11.1"
     },
     "orig_nbformat": 2
   },
