--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -406,7 +406,79 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---"
+        "### Use default hyperparameters to find most suitable algorithm"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "models_quick_search = {\n",
+        "    'LinearRegression': LinearRegression(),\n",
+        "    \"DecisionTreeRegressor\": DecisionTreeRegressor(random_state=0),\n",
+        "    \"RandomForestRegressor\": RandomForestRegressor(random_state=0),\n",
+        "    \"ExtraTreesRegressor\": ExtraTreesRegressor(random_state=0),\n",
+        "    \"AdaBoostRegressor\": AdaBoostRegressor(random_state=0),\n",
+        "    \"GradientBoostingRegressor\": GradientBoostingRegressor(random_state=0),\n",
+        "    \"XGBRegressor\": XGBRegressor(random_state=0),\n",
+        "}\n",
+        "\n",
+        "params_quick_search = {\n",
+        "    'LinearRegression': {},\n",
+        "    \"DecisionTreeRegressor\": {},\n",
+        "    \"RandomForestRegressor\": {},\n",
+        "    \"ExtraTreesRegressor\": {},\n",
+        "    \"AdaBoostRegressor\": {},\n",
+        "    \"GradientBoostingRegressor\": {},\n",
+        "    \"XGBRegressor\": {},\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Do a hyperparameter optimization search using default hyperparameters."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "search = HyperparameterOptimizationSearch(models=models_quick_search, params=params_quick_search)\n",
+        "search.fit(X_train, y_train, scoring='r2', n_jobs=-1, cv=5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check the results produced."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "grid_search_summary, grid_search_pipelines = search.score_summary(sort_by='mean_score')\n",
+        "grid_search_summary"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "* Client business requirement is an R2 score of at least 0.75\n",
+        "* The best result is RandomForestRegressor with an average R2 score around 0.80\n",
+        "* Applying an extensive search may improve the score"
       ]
     },
     {
@@ -420,15 +492,89 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "NOTE"
+        "## Extensive Search"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* You may add as many sections as you want, as long as they support your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
+        "* Conduct an extensive search on most suitable model to find the best hyperparameter configuration."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Define model and parameters, for Extensive Search"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "models_search = {\n",
+        "    \"RandomForestRegressor\":RandomForestRegressor(random_state=0),\n",
+        "}\n",
+        "\n",
+        "params_search = {\n",
+        "    \"RandomForestRegressor\":{\n",
+        "        'model__n_estimators': [100,700],\n",
+        "        'model__max_depth': [6,18,None],\n",
+        "    }\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Extensive GridSearch CV"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "search = HyperparameterOptimizationSearch(models=models_search, params=params_search)\n",
+        "search.fit(X_train, y_train, scoring='r2', n_jobs=-1, cv=5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "grid_search_summary, grid_search_pipelines = search.score_summary(sort_by='mean_score')\n",
+        "grid_search_summary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* The above extensive search improved the score, but only very slightly.\n",
+        "\n",
+        "* Nevertheless, the client business requirement of 0.75 has been satisfied with a score of 0.80"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     },
     {
