Assess feature importance structure

--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -581,6 +581,50 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Establishing the best model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_model = grid_search_summary.iloc[0,0]\n",
+        "best_model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_parameters = grid_search_pipelines[best_model].best_params_\n",
+        "best_parameters"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Define the best regressor, based on search"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_regressor_pipeline = grid_search_pipelines[best_model].best_estimator_\n",
+        "best_regressor_pipeline"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "---"
       ]
     },
@@ -590,14 +634,7 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Push files to Repo"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* If you do not need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
+        "## Assess feature importance"
       ]
     },
     {
@@ -609,12 +646,30 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
-        "try:\n",
-        "  # create here your folder\n",
-        "  # os.makedirs(name='')\n",
-        "except Exception as e:\n",
-        "  print(e)\n"
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "sns.set_style('whitegrid')\n",
+        "\n",
+        "%matplotlib inline\n",
+        "\n",
+        "# Following data cleaning and feature engineering, the feature shows changes\n",
+        "data_cleaning_feat_eng_steps = 5 # how many data cleaning and feature engineering does your pipeline hold?\n",
+        "columns_after_data_cleaning_feat_eng = (Pipeline(best_regressor_pipeline.steps[:data_cleaning_feat_eng_steps])\n",
+        "                                        .transform(X_train)\n",
+        "                                        .columns)\n",
+        "\n",
+        "best_features = columns_after_data_cleaning_feat_eng[best_regressor_pipeline['feat_selection'].get_support()].to_list()\n",
+        "\n",
+        "# create DataFrame to display feature importance\n",
+        "df_feature_importance = (pd.DataFrame(data={\n",
+        "          'Feature': columns_after_data_cleaning_feat_eng[best_regressor_pipeline['feat_selection'].get_support()],\n",
+        "          'Importance': best_regressor_pipeline['model'].feature_importances_})\n",
+        "  .sort_values(by='Importance', ascending=False)\n",
+        "  )\n",
+        "\n",
+        "# Most important features statement and plot\n",
+        "print(f\"* These are the {len(best_features)} most important features in descending order. \"\n",
+        "      f\"The model was trained on them: \\n{best_features}\")\n"
       ]
     }
   ],
