Apply regressor for Principal Component Analysis

--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -669,7 +669,173 @@
         "\n",
         "# Most important features statement and plot\n",
         "print(f\"* These are the {len(best_features)} most important features in descending order. \"\n",
-        "      f\"The model was trained on them: \\n{best_features}\")\n"
+        "      f\"The model was trained on them: \\n{best_features}\")\n",
+        "\n",
+        "df_feature_importance.plot(kind='bar',x='Feature',y='Importance')\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluate Pipeline Performance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error \n",
+        "import numpy as np\n",
+        "\n",
+        "def regression_performance(X_train, y_train, X_test, y_test,pipeline):\n",
+        "\tprint(\"Model Evaluation \\n\")\n",
+        "\tprint(\"* Train Set\")\n",
+        "\tregression_evaluation(X_train,y_train,pipeline)\n",
+        "\tprint(\"* Test Set\")\n",
+        "\tregression_evaluation(X_test,y_test,pipeline)\n",
+        "\n",
+        "def regression_evaluation(X,y,pipeline):\n",
+        "  prediction = pipeline.predict(X)\n",
+        "  print('R2 Score:', r2_score(y, prediction).round(3))  \n",
+        "  print('Mean Absolute Error:', mean_absolute_error(y, prediction).round(3))  \n",
+        "  print('Mean Squared Error:', mean_squared_error(y, prediction).round(3))  \n",
+        "  print('Root Mean Squared Error:', np.sqrt(mean_squared_error(y, prediction)).round(3))\n",
+        "  print(\"\\n\")\n",
+        "\n",
+        "\n",
+        "def regression_evaluation_plots(X_train, y_train, X_test, y_test, pipeline, alpha_scatter=0.5):\n",
+        "  pred_train = pipeline.predict(X_train)\n",
+        "  pred_test = pipeline.predict(X_test)\n",
+        "\n",
+        "\n",
+        "  fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(12,6))\n",
+        "  sns.scatterplot(x=y_train , y=pred_train, alpha=alpha_scatter, ax=axes[0])\n",
+        "  sns.lineplot(x=y_train , y=y_train, color='red', ax=axes[0])\n",
+        "  axes[0].set_xlabel(\"Actual\")\n",
+        "  axes[0].set_ylabel(\"Predictions\")\n",
+        "  axes[0].set_title(\"Train Set\")\n",
+        "\n",
+        "  sns.scatterplot(x=y_test , y=pred_test, alpha=alpha_scatter, ax=axes[1])\n",
+        "  sns.lineplot(x=y_test , y=y_test, color='red', ax=axes[1])\n",
+        "  axes[1].set_xlabel(\"Actual\")\n",
+        "  axes[1].set_ylabel(\"Predictions\")\n",
+        "  axes[1].set_title(\"Test Set\")\n",
+        "\n",
+        "  plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Evaluate Performance on Train and Test sets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "regression_performance(X_train, y_train, X_test, y_test, best_regressor_pipeline)\n",
+        "regression_evaluation_plots(X_train, y_train, X_test, y_test, best_regressor_pipeline)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Applying Regressor with PCA"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Explore potential values for PCA n_components."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pipeline = PipelineOptimization(model=LinearRegression())\n",
+        "pipeline_pca = Pipeline(pipeline.steps[:6])\n",
+        "df_pca = pipeline_pca.fit_transform(df.drop(['SalePrice'],axis=1))\n",
+        "\n",
+        "print(df_pca.shape,'\\n', type(df_pca))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Apply PCA separately to the scaled data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.decomposition import PCA\n",
+        "\n",
+        "n_components = 17\n",
+        "\n",
+        "def pca_components_analysis(df_pca,n_components): \n",
+        "    pca = PCA(n_components=n_components).fit(df_pca)\n",
+        "    x_PCA = pca.transform(df_pca) # array with transformed PCA\n",
+        "\n",
+        "    ComponentsList = [\"Component \" + str(number) for number in range(n_components)]\n",
+        "    dfExplVarRatio = pd.DataFrame(\n",
+        "        data= np.round(100 * pca.explained_variance_ratio_ ,3),\n",
+        "        index=ComponentsList,\n",
+        "        columns=['Explained Variance Ratio (%)'])\n",
+        "\n",
+        "    dfExplVarRatio['Accumulated Variance'] = dfExplVarRatio['Explained Variance Ratio (%)'].cumsum() \n",
+        "\n",
+        "    PercentageOfDataExplained = dfExplVarRatio['Explained Variance Ratio (%)'].sum()\n",
+        "\n",
+        "    print(f\"* The {n_components} components explain {round(PercentageOfDataExplained,2)}% of the data \\n\")\n",
+        "    plt.figure(figsize=(12,5))\n",
+        "    sns.lineplot(data=dfExplVarRatio,  marker=\"o\")\n",
+        "    plt.xticks(rotation=90)\n",
+        "    plt.yticks(np.arange(0, 110, 10))\n",
+        "    plt.show()\n",
+        "\n",
+        "pca_components_analysis(df_pca=df_pca,n_components=n_components)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "n_components = 9\n",
+        "pca_components_analysis(df_pca=df_pca,n_components=n_components)"
       ]
     }
   ],
