Grid search application

--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -763,7 +763,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Applying Regressor with PCA"
+        "# Applying Regressor with Principal Component Analysis"
       ]
     },
     {
@@ -790,7 +790,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Apply PCA separately to the scaled data"
+        "Apply Principal Component Analysis separately to the scaled data"
       ]
     },
     {
@@ -836,6 +836,168 @@
       "source": [
         "n_components = 9\n",
         "pca_components_analysis(df_pca=df_pca,n_components=n_components)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Rewrite ML Pipeline for Modelling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def PipelineOptimization(model):\n",
+        "    pipeline_base = Pipeline([\n",
+        "\n",
+        "      (\"OrdinalCategoricalEncoder\", OrdinalEncoder(encoding_method='arbitrary',\n",
+        "                                                   variables=['BsmtExposure',\n",
+        "                                                              'BsmtFinType1',\n",
+        "                                                              'GarageFinish',\n",
+        "                                                              'KitchenQual'])),\n",
+        "\n",
+        "      (\"NumericLogTransform\", vt.LogTransformer(variables=['1stFlrSF',\n",
+        "                                                           'LotArea',\n",
+        "                                                           'GrLivArea'])),\n",
+        "      (\"NumericPowerTransform\", vt.PowerTransformer(variables=['GarageArea',\n",
+        "                                                               'MasVnrArea'])),\n",
+        "      (\"NumericYeoJohnsonTransform\",\n",
+        "       vt.YeoJohnsonTransformer(variables=['OpenPorchSF'])),\n",
+        "\n",
+        "      (\"SmartCorrelatedSelection\",\n",
+        "       SmartCorrelatedSelection(variables=None,\n",
+        "                                method=corr_method,\n",
+        "                                threshold=0.6,\n",
+        "                                selection_method=selection_method\n",
+        "                                )),\n",
+        "\n",
+        "      (\"feat_scaling\", StandardScaler()),\n",
+        "\n",
+        "      (\"PCA\", PCA(n_components=n_components, random_state=0)),\n",
+        "\n",
+        "      (\"model\", model),\n",
+        "\n",
+        "    ])\n",
+        "\n",
+        "    return pipeline_base"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Grid Search CV – Sklearn"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"* Train set:\", X_train.shape, y_train.shape, \"\\n* Test set:\",  X_test.shape, y_test.shape)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Use standard hyperparameters to find most suitable model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "models_quick_search = {\n",
+        "    'LinearRegression': LinearRegression(),\n",
+        "    \"DecisionTreeRegressor\": DecisionTreeRegressor(random_state=0),\n",
+        "    \"RandomForestRegressor\": RandomForestRegressor(random_state=0),\n",
+        "    \"ExtraTreesRegressor\": ExtraTreesRegressor(random_state=0),\n",
+        "    \"AdaBoostRegressor\": AdaBoostRegressor(random_state=0),\n",
+        "    \"GradientBoostingRegressor\": GradientBoostingRegressor(random_state=0),\n",
+        "    \"XGBRegressor\": XGBRegressor(random_state=0),\n",
+        "}\n",
+        "\n",
+        "params_quick_search = {\n",
+        "    'LinearRegression': {},\n",
+        "    \"DecisionTreeRegressor\": {},\n",
+        "    \"RandomForestRegressor\": {},\n",
+        "    \"ExtraTreesRegressor\": {},\n",
+        "    \"AdaBoostRegressor\": {},\n",
+        "    \"GradientBoostingRegressor\": {},\n",
+        "    \"XGBRegressor\": {},\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We can do a quick optimization search."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "quick_search = HyperparameterOptimizationSearch(models=models_quick_search, params=params_quick_search)\n",
+        "quick_search.fit(X_train, y_train, scoring='r2', n_jobs=-1, cv=5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Results check"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "grid_search_summary, grid_search_pipelines = quick_search.score_summary(sort_by='mean_score')\n",
+        "grid_search_summary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Do extensive search on most feasible model to helps locate the best hyperparameter configuration"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Define model and parameters for extensive search"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "models_search = {\n",
+        "    \"RandomForestRegressor\":RandomForestRegressor(random_state=0),\n",
+        "}\n",
+        "\n",
+        "params_search = {\n",
+        "    \"RandomForestRegressor\":{\n",
+        "        'model__n_estimators': [100,700],\n",
+        "        'model__max_depth': [6,18,None],\n",
+        "    }\n",
+        "}"
       ]
     }
   ],
